# ABP

./: README.md
A1/: commands.txt  cpuplot.py  gpubs.sh  mupdparse.py  mupdplot.py  outparse.py  stc.csv  stc.out  stc1.csv  stc1.out  stc1024.csv  stc1024.out  stc128.csv  stc128.out  stc128MUPD.csv  stc128d.csv  stc128d.out  stc128dMUPD.csv  stc32.csv  stc32.out  stc384.csv  stc384.out  stc512.csv  stc512.out  stc512d.csv  stc512d.out  sto2.csv  sto2.out  sto3.csv  sto3.out  sto3n.csv  sto3n.out  stream_triad.cc  stream_triad_cuda.cu  stream_triad_cuda_double.cu  stream_triad_o3  stv0.csv  stv0.out  stv1.csv  stv1.out
A2/: README.txt  commands.txt  diff.py  outparse.py  plotb.py  plotg.py  reduction.cu  stream_triad_cuda.cu
A2/AB/: mmab.cu  mmab1.cu  mmab1_cb.cu  mmab_cb.cu  mmabt.cu  mmabt_cb.cu  mmabt_cpu.cpp
A2/ATX/: mmatx.cu  mmatx1.cu  mmatx1_cb.cu  mmatx_cb.cu
A2/AX/: mmax.cu  mmax1.cu  mmax1_cb.cu  mmax_cb.cu  mmax_cbm.cu  mmax_cbn.cu  mmaxm.cu  mmaxn.cu
A2/outputs/: mmabt.csv  mmabt_cb.csv  mmabt_cpu.csv  mmatx.csv  mmatx.txt  mmatx_cb.csv  mmatx_cb.txt  mmax.csv  mmax.txt  mmax_cb.csv  mmax_cb.txt  mmax_cbm.csv  mmax_cbn.csv  mmaxm.csv  mmaxn.csv
A3/: CMakeLists.txt  README.md  commands.txt  example_results.txt  exercise_4_begin.cpp  exercise_4_solution.cpp  exercise_mdrange_begin.cpp  exercise_mdrange_solution.cpp  fed.cpp  nvprof.txt  plottask.py  task4layout.csv
A3/outputs/: task2cpu.csv  task2cpud.csv  task2gpu.csv  task2gpud.csv
